--- a/code/R-notebook/r-11.ipynb
+++ b/code/R-notebook/r-11.ipynb
@@ -1,7 +1,7 @@
 {
   "cells": [
     {
-      "id": "ff852294",
+      "id": "2d4af9a6",
       "cell_type": "markdown",
       "source": "[\u8fbb\u771f\u543e\u30fb\u77e2\u5439\u592a\u6717\u300e\u30bc\u30ed\u304b\u3089\u306f\u3058\u3081\u308b\u30c7\u30fc\u30bf\u30b5\u30a4\u30a8\u30f3\u30b9\u5165\u9580\u300f\uff08\u8b1b\u8ac7\u793e,\u00a02021\uff09](https://github.com/taroyabuki/fromzero)",
       "metadata": {}
@@ -20,10 +20,10 @@
         "  install.packages(setdiff(packages_to_install, installed_packages))\n",
         "}"
       ],
-      "id": "daa8a5a9-3911-4aa8-8101-ca1204c84477"
+      "id": "7177e045-99d0-4911-b316-f23d81dc47d2"
     },
     {
-      "id": "b0a909a0",
+      "id": "812cd9d1",
       "cell_type": "markdown",
       "source": "## 11.1 Keras\u306b\u3088\u308b\u56de\u5e30",
       "metadata": {}
@@ -44,7 +44,7 @@
         "                \"/fromzero/master/data/wine.csv\")\n",
         "tmp <- read_csv(my_url)"
       ],
-      "id": "f447fe2b-4e52-4850-befb-ffdb15ee2eae"
+      "id": "af3b7174-c6e0-4116-849f-ebf6c23e82dd"
     },
     {
       "cell_type": "code",
@@ -54,7 +54,7 @@
       "source": [
         "my_data <- tmp[sample(nrow(tmp)), ]"
       ],
-      "id": "fdd9352a-3feb-4572-b1d5-c1a00a197f74"
+      "id": "222c1c22-f38a-49b6-8aca-d8020c6528cf"
     },
     {
       "cell_type": "code",
@@ -66,7 +66,7 @@
         "  select(-LPRICE2) %>% scale\n",
         "y <- my_data$LPRICE2"
       ],
-      "id": "7355e2dc-44b5-43f5-96e9-2ee3e50387f5"
+      "id": "c364750d-a9d6-4126-a07a-df8857d13425"
     },
     {
       "cell_type": "code",
@@ -76,7 +76,7 @@
       "source": [
         "curve(activation_relu(x), -3, 3)"
       ],
-      "id": "147fa36c-146d-4ab0-88b6-adca4a125acb"
+      "id": "fe527389-304e-48b3-a836-bdff87822f3a"
     },
     {
       "cell_type": "code",
@@ -91,7 +91,7 @@
         "summary(my_model) # \u30cd\u30c3\u30c8\u30ef\u30fc\u30af\u306e\u6982\u8981\n",
         "# \u5272\u611b\uff08Python\u306e\u7d50\u679c\u3092\u53c2\u7167\uff09"
       ],
-      "id": "c0af1438-36e6-41f2-bff4-816802604f7f"
+      "id": "afb18057-4b66-4654-9036-9c1a92cad746"
     },
     {
       "cell_type": "code",
@@ -103,7 +103,7 @@
         "  loss = \"mse\",\n",
         "  optimizer = \"rmsprop\")"
       ],
-      "id": "e0378cd7-66e1-46c8-8ac2-61e2f5c6e355"
+      "id": "0c784aa4-67c8-45d1-98ca-6c33d1af9f02"
     },
     {
       "cell_type": "code",
@@ -115,7 +115,7 @@
         "  patience = 20,\n",
         "  restore_best_weights = TRUE)"
       ],
-      "id": "59ea439b-5685-4f3f-a832-2ccc565af634"
+      "id": "5af737a5-b418-40c9-be97-02370c753c95"
     },
     {
       "cell_type": "code",
@@ -132,7 +132,7 @@
         "    callbacks = list(my_cb),\n",
         "    verbose = 0)"
       ],
-      "id": "39fa2bef-8de6-475a-9aaf-645f4c2346f8"
+      "id": "a8657ae9-e007-4d71-9250-4fb143240575"
     },
     {
       "cell_type": "code",
@@ -142,7 +142,7 @@
       "source": [
         "plot(my_history)"
       ],
-      "id": "9fe6a7b8-92b0-4958-a768-a7e4af299937"
+      "id": "7eb59e46-1b56-445e-952a-6c01487aa2e4"
     },
     {
       "cell_type": "code",
@@ -152,7 +152,7 @@
       "source": [
         "my_history"
       ],
-      "id": "1fae91c2-585c-4856-8ca5-0eb693ec3b64"
+      "id": "8ba8f6e2-95b1-4898-84ee-8ac799f4a606"
     },
     {
       "cell_type": "code",
@@ -163,10 +163,10 @@
         "y_ <- my_model %>% predict(X)\n",
         "mean((y_ - y)^2)**0.5"
       ],
-      "id": "c2118759-731f-4162-8bf4-92f0bd928620"
+      "id": "17afc599-4513-4bcc-807c-61acc941dcd3"
     },
     {
-      "id": "247b4dd3",
+      "id": "886681b0",
       "cell_type": "markdown",
       "source": "## 11.2 Keras\u306b\u3088\u308b\u5206\u985e",
       "metadata": {}
@@ -185,7 +185,7 @@
         "library(tidyverse)\n",
         "my_data <- iris[sample(nrow(iris)), ]"
       ],
-      "id": "0bc11ae0-8e75-49af-ad16-62ff1ceefc58"
+      "id": "07985f3e-616e-4382-b264-4f73c8cde2a1"
     },
     {
       "cell_type": "code",
@@ -197,7 +197,7 @@
         "  select(-Species) %>% scale\n",
         "y <- as.integer(my_data$Species) - 1"
       ],
-      "id": "54e63eb5-75c6-4c1f-a5d7-99a08c2e84b8"
+      "id": "64e1632e-85d4-4671-a1a0-36927d79d1f4"
     },
     {
       "cell_type": "code",
@@ -209,7 +209,7 @@
         "  layer_dense(units = 3, activation = \"relu\", input_shape = c(4)) %>%\n",
         "  layer_dense(units = 3, activation = \"softmax\")"
       ],
-      "id": "9d688872-3557-4545-81ba-de13ad796bb2"
+      "id": "a3324ee0-4fce-4e5e-a5bb-c91c7c15d2bb"
     },
     {
       "cell_type": "code",
@@ -221,7 +221,7 @@
         "                     optimizer = \"rmsprop\",\n",
         "                     metrics = c(\"accuracy\"))"
       ],
-      "id": "531ee6a6-b061-495b-bf05-4df9212d0972"
+      "id": "a8404c06-3e42-40c1-bce2-3076514e9550"
     },
     {
       "cell_type": "code",
@@ -244,7 +244,7 @@
         "\n",
         "plot(my_history)"
       ],
-      "id": "091a357d-5f0b-47ae-acea-5aa8ab54a53f"
+      "id": "430c8d28-3637-464d-aa89-cc6f7ce0e5c1"
     },
     {
       "cell_type": "code",
@@ -254,7 +254,7 @@
       "source": [
         "my_history"
       ],
-      "id": "c3373450-b32b-4856-bd49-8eccec0cfa4a"
+      "id": "0dd861d5-b27b-4e51-b53f-cf91f7fb1585"
     },
     {
       "cell_type": "code",
@@ -266,7 +266,7 @@
         "y_ <- apply(tmp, 1, which.max) - 1\n",
         "mean(y_ == y)"
       ],
-      "id": "94e24440-348e-400c-8299-e158245ba496"
+      "id": "70489d5c-a524-40f5-b9d9-e8a835e325c9"
     },
     {
       "cell_type": "code",
@@ -278,7 +278,7 @@
         "\n",
         "-mean(log(c(0.7, 0.6, 0.2, 0.7)))"
       ],
-      "id": "82b663c4-7e8f-4265-8ba3-68eab7861cfb"
+      "id": "55ac573f-71e9-4d54-9fce-21c3abe30ddf"
     },
     {
       "cell_type": "code",
@@ -287,16 +287,16 @@
       "outputs": [],
       "source": [
         "y <- c(2, 1, 0, 1)\n",
-        "y_1 <- list(c(0.1, 0.1, 0.8),\n",
-        "            c(0.1, 0.7, 0.2),\n",
-        "            c(0.3, 0.4, 0.3),\n",
-        "            c(0.1, 0.8, 0.1))\n",
-        "y_2 <- list(c(0.1, 0.2, 0.7),\n",
-        "            c(0.2, 0.6, 0.2),\n",
-        "            c(0.2, 0.5, 0.3),\n",
-        "            c(0.2, 0.7, 0.1))"
+        "y_1 <- rbind(c(0.1, 0.1, 0.8),\n",
+        "             c(0.1, 0.7, 0.2),\n",
+        "             c(0.3, 0.4, 0.3),\n",
+        "             c(0.1, 0.8, 0.1))\n",
+        "y_2 <- rbind(c(0.1, 0.2, 0.7),\n",
+        "             c(0.2, 0.6, 0.2),\n",
+        "             c(0.2, 0.5, 0.3),\n",
+        "             c(0.2, 0.7, 0.1))"
       ],
-      "id": "4c92e170-cb3d-4916-8df5-e790fec1a98a"
+      "id": "62139a11-dee4-4c1b-81ce-6da132762afa"
     },
     {
       "cell_type": "code",
@@ -307,10 +307,10 @@
         "c(mean(as.array(loss_sparse_categorical_crossentropy(y_true = y, y_pred = y_1))),\n",
         "  mean(as.array(loss_sparse_categorical_crossentropy(y_true = y, y_pred = y_2))))"
       ],
-      "id": "fee895bd-95ad-408e-a731-04361e53909d"
+      "id": "d9cd1bc1-76ba-46c2-b9da-350e82aa08d8"
     },
     {
-      "id": "4697bce2",
+      "id": "20f23787",
       "cell_type": "markdown",
       "source": "## 11.3 MNIST\uff1a\u624b\u66f8\u304d\u6570\u5b57\u306e\u5206\u985e",
       "metadata": {}
@@ -329,7 +329,7 @@
         "library(tidyverse)\n",
         "c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()"
       ],
-      "id": "53ea2bfc-2f49-412f-831b-7e8ea34be757"
+      "id": "85eee8e5-7efe-44ad-8ccd-bc6ad7940912"
     },
     {
       "cell_type": "code",
@@ -339,7 +339,7 @@
       "source": [
         "dim(x_train)"
       ],
-      "id": "3f926680-1806-4df6-9104-c3c6227e7cd4"
+      "id": "4dc69a31-549c-4e09-b333-4123c5321d7a"
     },
     {
       "cell_type": "code",
@@ -349,7 +349,7 @@
       "source": [
         "x_train[5, , ]"
       ],
-      "id": "097ad75e-8cac-443c-a6ed-29d89404abcc"
+      "id": "5cbd757b-56c9-48f1-a8f8-71af3f811f23"
     },
     {
       "cell_type": "code",
@@ -360,7 +360,7 @@
         "plot(as.raster(x = x_train[5, , ],\n",
         "               max = max(x_train)))"
       ],
-      "id": "f1d0d2ed-1dab-44b7-894c-f864b92b7bc1"
+      "id": "b37290d3-4113-46a4-a826-291a212cc6b7"
     },
     {
       "cell_type": "code",
@@ -370,7 +370,7 @@
       "source": [
         "head(y_train)"
       ],
-      "id": "d18dfb52-d548-4d73-ae13-6098e7890f62"
+      "id": "f53d65d4-42f8-4205-8f6d-5f6e8f4a1eb5"
     },
     {
       "cell_type": "code",
@@ -380,7 +380,7 @@
       "source": [
         "c(min(x_train), max(x_train))"
       ],
-      "id": "0e5a8e22-2d01-4bd9-a8c5-a51cd1c49d66"
+      "id": "daa88019-ec64-4945-b603-459f9b774244"
     },
     {
       "cell_type": "code",
@@ -391,7 +391,7 @@
         "x_train <- x_train / 255\n",
         "x_test  <- x_test  / 255"
       ],
-      "id": "0ef61e8e-7051-4849-9483-a2300cc782d4"
+      "id": "2839af0e-0a47-43a7-b7af-274896aed861"
     },
     {
       "cell_type": "code",
@@ -403,7 +403,7 @@
         "x_train <- x_train[my_index, , ]\n",
         "y_train <- y_train[my_index]"
       ],
-      "id": "5622942a-8e35-4c2e-8d2e-7a8feebc7e26"
+      "id": "7c50048a-70eb-41df-9c3c-57c3dfd89299"
     },
     {
       "cell_type": "code",
@@ -425,7 +425,7 @@
         "my_cb <- callback_early_stopping(patience = 5,\n",
         "                                 restore_best_weights = TRUE)"
       ],
-      "id": "e7eeb8d8-9c4b-476b-a08b-b1ac07d58d24"
+      "id": "54e39270-3904-4079-b49f-5f610098d95d"
     },
     {
       "cell_type": "code",
@@ -444,7 +444,7 @@
         "\n",
         "plot(my_history)"
       ],
-      "id": "c9e28530-e083-43e5-a29c-81ae488cb0c6"
+      "id": "9647f981-e48a-4ce8-a8ce-95363e032f05"
     },
     {
       "cell_type": "code",
@@ -456,7 +456,7 @@
         "y_ <- apply(tmp, 1, which.max) - 1\n",
         "table(y_, y_test)"
       ],
-      "id": "25e506d8-21ee-4b58-8d1f-ec912be35914"
+      "id": "edc06331-6070-4882-b32b-3a5a4e855a38"
     },
     {
       "cell_type": "code",
@@ -464,7 +464,7 @@
       "metadata": {},
       "outputs": [],
       "source": [],
-      "id": "c1eb3821-ecae-473f-b041-ffa322af3bd2"
+      "id": "adcf2909-72cc-4b18-accc-b39ca2ee7729"
     },
     {
       "cell_type": "code",
@@ -474,7 +474,7 @@
       "source": [
         "mean(y_ == y_test)"
       ],
-      "id": "90f570d7-37da-4ebc-a10a-ec6d61a90993"
+      "id": "97c35f82-3020-4426-b0cc-72ee09f2064d"
     },
     {
       "cell_type": "code",
@@ -485,7 +485,7 @@
         "my_model %>%\n",
         "  evaluate(x = x_test, y = y_test)"
       ],
-      "id": "f00accfc-05a0-4cef-ae2b-4b1c73d3b578"
+      "id": "374d0327-ffd0-4f46-af59-7d79a80bc9a5"
     },
     {
       "cell_type": "code",
@@ -496,7 +496,7 @@
         "x_train2d <- x_train %>% array_reshape(c(-1, 28, 28, 1))\n",
         "x_test2d  <- x_test  %>% array_reshape(c(-1, 28, 28, 1))"
       ],
-      "id": "fd9b88c5-e912-4ce2-b40c-dc69a06b99b9"
+      "id": "deb6b5c6-19f5-42c1-9d6e-21a2efa42fdb"
     },
     {
       "cell_type": "code",
@@ -523,7 +523,7 @@
         "my_cb <- callback_early_stopping(patience = 5,\n",
         "                                 restore_best_weights = TRUE)"
       ],
-      "id": "a7a9d26e-82ca-4d19-93e1-d741c9692ebd"
+      "id": "52f303c5-ab07-46a5-95d2-487a26038537"
     },
     {
       "cell_type": "code",
@@ -542,7 +542,7 @@
         "\n",
         "plot(my_history)"
       ],
-      "id": "8ef336dc-dad3-4391-a135-050a307f7272"
+      "id": "84accc2b-6f1d-4999-b873-843e07c4325e"
     },
     {
       "cell_type": "code",
@@ -553,7 +553,7 @@
         "my_model %>%\n",
         "  evaluate(x = x_test2d, y = y_test)"
       ],
-      "id": "47d89624-0649-4ea4-807b-e31f62355652"
+      "id": "43580803-e0e6-4afc-93a7-5cfdabd14816"
     },
     {
       "cell_type": "code",
@@ -581,7 +581,7 @@
         "my_cb <- callback_early_stopping(patience = 5,\n",
         "                                 restore_best_weights = TRUE)"
       ],
-      "id": "3cdea6e0-d177-4537-9d60-74af98c8452d"
+      "id": "2df945a4-ec03-4f92-9999-0a27c5f46a46"
     },
     {
       "cell_type": "code",
@@ -600,7 +600,7 @@
         "\n",
         "plot(my_history)"
       ],
-      "id": "9d397aef-4cf3-4470-bef6-bd315716305d"
+      "id": "72a1eb89-9635-45d2-a82e-8395e904c205"
     },
     {
       "cell_type": "code",
@@ -611,7 +611,7 @@
         "my_model %>%\n",
         "  evaluate(x = x_test2d, y = y_test)"
       ],
-      "id": "506c6143-16f6-46a5-bfa0-f9d59eb47e10"
+      "id": "c35fe39a-e301-4afd-9b9c-4e2709ecf73a"
     },
     {
       "cell_type": "code",
@@ -629,7 +629,7 @@
         "  filter(y_ != y) %>%                       # \u4e88\u6e2c\u304c\u306f\u305a\u308c\u305f\u3082\u306e\u3092\u6b8b\u3059\n",
         "  arrange(desc(y_prob))                     # \u78ba\u7387\u306e\u5927\u304d\u3044\u9806\u306b\u4e26\u3073\u66ff\u3048\u308b"
       ],
-      "id": "5c7a136c-aabc-47fd-9769-7a9a645b8b89"
+      "id": "5f6a14cc-eee6-42ba-86fe-cbcbdd4b5462"
     },
     {
       "cell_type": "code",
@@ -639,7 +639,7 @@
       "source": [
         "head(my_result)"
       ],
-      "id": "ebcd6110-7ce3-46a4-b08a-0f44100e01bd"
+      "id": "e9097ab2-8435-49fa-a03a-f0ea9ab96c70"
     },
     {
       "cell_type": "code",
@@ -665,10 +665,10 @@
         "  theme(legend.position = \"none\") +\n",
         "  facet_grid(. ~ label)"
       ],
-      "id": "266d7a58-2557-45c0-b009-31781dad835f"
+      "id": "5db1810e-ffb6-4b46-90dc-152a68d65db4"
     },
     {
-      "id": "adea8ba1",
+      "id": "f8ae4f91",
       "cell_type": "markdown",
       "source": "## 11.4 AutoML",
       "metadata": {}
@@ -691,7 +691,7 @@
         "h2o.no_progress()\n",
         "# h2o.shutdown(prompt = FALSE) # \u505c\u6b62"
       ],
-      "id": "b77293c8-eccf-4ed7-b7e8-ec9fe711cd95"
+      "id": "fce65b55-96f8-4796-9050-618889fbe0a0"
     },
     {
       "cell_type": "code",
@@ -706,7 +706,7 @@
         "# \u3042\u308b\u3044\u306f\n",
         "my_frame <- h2o.importFile(my_url, header = TRUE) # \u30c7\u30fc\u30bf\u3092\u8aad\u307f\u8fbc\u3080\uff0e"
       ],
-      "id": "c49ce4db-d9dd-41a6-86b5-1eaf00e59268"
+      "id": "9fa46b0d-6b02-43b0-9c9f-37d004bf4ad3"
     },
     {
       "cell_type": "code",
@@ -720,7 +720,7 @@
         "my_frame %>% as.data.frame %>% head\n",
         "# \u7d50\u679c\u306f\u5272\u611b\uff08\u898b\u305f\u76ee\u306f\u540c\u3058\uff09"
       ],
-      "id": "5908ceb6-43cf-4330-806b-79c1721bfabb"
+      "id": "8d0aec98-70b0-48b9-b7be-a1ed8bb0238b"
     },
     {
       "cell_type": "code",
@@ -733,7 +733,7 @@
         "    training_frame = my_frame,\n",
         "    max_runtime_secs = 60)"
       ],
-      "id": "73d476d5-6001-4eb8-8347-3da3ecf12c4e"
+      "id": "3a76a85d-2264-4d3d-9220-6318afd723d8"
     },
     {
       "cell_type": "code",
@@ -743,7 +743,7 @@
       "source": [
         "min(my_model@leaderboard$rmse)"
       ],
-      "id": "6bcecbb3-80f1-47ef-ae2c-d3dfb51e9a2d"
+      "id": "2d72d26b-c036-4503-aa77-087a4d359a5b"
     },
     {
       "cell_type": "code",
@@ -759,7 +759,7 @@
         "\n",
         "plot(y, y_)"
       ],
-      "id": "298efff7-9cb7-4965-9388-35d4e984bd03"
+      "id": "88f6a1f1-a19d-4de6-847b-a69835395b08"
     },
     {
       "cell_type": "code",
@@ -772,7 +772,7 @@
         "x_train <- x_train[my_index, , ]\n",
         "y_train <- y_train[my_index]"
       ],
-      "id": "075576af-c11e-4c23-a899-b9e5ac7c3734"
+      "id": "731319d1-569d-4824-b3fe-8237025e619d"
     },
     {
       "cell_type": "code",
@@ -791,7 +791,7 @@
         "  as.data.frame\n",
         "my_test <- as.h2o(tmp)"
       ],
-      "id": "3b8de2c6-61b1-45d9-a57f-534d6f66c729"
+      "id": "f409288e-68fb-43df-9f1b-92430ccb1c3f"
     },
     {
       "cell_type": "code",
@@ -804,7 +804,7 @@
         "    training_frame = my_train,\n",
         "    max_runtime_secs = 120)"
       ],
-      "id": "83a51a79-8c29-4424-9e85-7a4f7d427f3c"
+      "id": "d54746bb-1f99-49aa-9f36-202c8e2cd9b9"
     },
     {
       "cell_type": "code",
@@ -815,7 +815,7 @@
         "min(my_model@leaderboard$\n",
         "    mean_per_class_error)"
       ],
-      "id": "13edc0f6-949b-446d-bf5e-9be4f6753729"
+      "id": "d2fae722-1283-4339-8c0d-5d328ef189da"
     },
     {
       "cell_type": "code",
@@ -829,7 +829,7 @@
         "\n",
         "mean(y_ == y_test)"
       ],
-      "id": "3629b519-f8d0-47af-a4cb-0f3bb9f2864b"
+      "id": "a8f2e855-8f3b-4478-b777-d699d00e783a"
     }
   ],
   "nbformat": 4,
