--- a/code/r.Rmd
+++ b/code/r.Rmd
@@ -2742,14 +2742,14 @@ mean(y_ == y)
 
 ```{r}
 y <- c(2, 1, 0, 1)
-y_1 <- list(c(0.1, 0.1, 0.8),
-            c(0.1, 0.7, 0.2),
-            c(0.3, 0.4, 0.3),
-            c(0.1, 0.8, 0.1))
-y_2 <- list(c(0.1, 0.2, 0.7),
-            c(0.2, 0.6, 0.2),
-            c(0.2, 0.5, 0.3),
-            c(0.2, 0.7, 0.1))
+y_1 <- rbind(c(0.1, 0.1, 0.8),
+             c(0.1, 0.7, 0.2),
+             c(0.3, 0.4, 0.3),
+             c(0.1, 0.8, 0.1))
+y_2 <- rbind(c(0.1, 0.2, 0.7),
+             c(0.2, 0.6, 0.2),
+             c(0.2, 0.5, 0.3),
+             c(0.2, 0.7, 0.1))
 ```
 
 ```{r}
