%<-%のエラーに対応

--- a/code/R-notebook/r-11.ipynb
+++ b/code/R-notebook/r-11.ipynb
@@ -1,7 +1,7 @@
 {
   "cells": [
     {
-      "id": "2d4af9a6",
+      "id": "8b1b362c",
       "cell_type": "markdown",
       "source": "[\u8fbb\u771f\u543e\u30fb\u77e2\u5439\u592a\u6717\u300e\u30bc\u30ed\u304b\u3089\u306f\u3058\u3081\u308b\u30c7\u30fc\u30bf\u30b5\u30a4\u30a8\u30f3\u30b9\u5165\u9580\u300f\uff08\u8b1b\u8ac7\u793e,\u00a02021\uff09](https://github.com/taroyabuki/fromzero)",
       "metadata": {}
@@ -20,10 +20,10 @@
         "  install.packages(setdiff(packages_to_install, installed_packages))\n",
         "}"
       ],
-      "id": "7177e045-99d0-4911-b316-f23d81dc47d2"
+      "id": "a358fc7b-6ec9-4536-b2b3-e118b07fe008"
     },
     {
-      "id": "812cd9d1",
+      "id": "e7fae3bc",
       "cell_type": "markdown",
       "source": "## 11.1 Keras\u306b\u3088\u308b\u56de\u5e30",
       "metadata": {}
@@ -44,7 +44,7 @@
         "                \"/fromzero/master/data/wine.csv\")\n",
         "tmp <- read_csv(my_url)"
       ],
-      "id": "af3b7174-c6e0-4116-849f-ebf6c23e82dd"
+      "id": "8dde8a10-1ec9-4530-ac93-65897e34f291"
     },
     {
       "cell_type": "code",
@@ -54,7 +54,7 @@
       "source": [
         "my_data <- tmp[sample(nrow(tmp)), ]"
       ],
-      "id": "222c1c22-f38a-49b6-8aca-d8020c6528cf"
+      "id": "2a4c223e-29f8-4b57-852d-8ae25b466e98"
     },
     {
       "cell_type": "code",
@@ -66,7 +66,7 @@
         "  select(-LPRICE2) %>% scale\n",
         "y <- my_data$LPRICE2"
       ],
-      "id": "c364750d-a9d6-4126-a07a-df8857d13425"
+      "id": "eddb588f-bedd-4103-9171-f64821f72144"
     },
     {
       "cell_type": "code",
@@ -76,7 +76,7 @@
       "source": [
         "curve(activation_relu(x), -3, 3)"
       ],
-      "id": "fe527389-304e-48b3-a836-bdff87822f3a"
+      "id": "735bdb7b-a494-4650-8edc-bc0746773c5d"
     },
     {
       "cell_type": "code",
@@ -91,7 +91,7 @@
         "summary(my_model) # \u30cd\u30c3\u30c8\u30ef\u30fc\u30af\u306e\u6982\u8981\n",
         "# \u5272\u611b\uff08Python\u306e\u7d50\u679c\u3092\u53c2\u7167\uff09"
       ],
-      "id": "afb18057-4b66-4654-9036-9c1a92cad746"
+      "id": "48cf1447-7f43-4fc6-8a85-8d6ede08c75e"
     },
     {
       "cell_type": "code",
@@ -103,7 +103,7 @@
         "  loss = \"mse\",\n",
         "  optimizer = \"rmsprop\")"
       ],
-      "id": "0c784aa4-67c8-45d1-98ca-6c33d1af9f02"
+      "id": "be4027db-a89a-47db-ac15-465cf661cc22"
     },
     {
       "cell_type": "code",
@@ -115,7 +115,7 @@
         "  patience = 20,\n",
         "  restore_best_weights = TRUE)"
       ],
-      "id": "5af737a5-b418-40c9-be97-02370c753c95"
+      "id": "bb8e6ccb-2d7b-4b7f-aa42-0c4ba260f36c"
     },
     {
       "cell_type": "code",
@@ -132,7 +132,7 @@
         "    callbacks = list(my_cb),\n",
         "    verbose = 0)"
       ],
-      "id": "a8657ae9-e007-4d71-9250-4fb143240575"
+      "id": "60e09216-5fed-4818-9f34-c87a35bf6b0c"
     },
     {
       "cell_type": "code",
@@ -142,7 +142,7 @@
       "source": [
         "plot(my_history)"
       ],
-      "id": "7eb59e46-1b56-445e-952a-6c01487aa2e4"
+      "id": "1b91aa5b-1b83-4d41-b96a-319319ac81e4"
     },
     {
       "cell_type": "code",
@@ -152,7 +152,7 @@
       "source": [
         "my_history"
       ],
-      "id": "8ba8f6e2-95b1-4898-84ee-8ac799f4a606"
+      "id": "c887198c-01f1-4664-b883-90bc4b944dd7"
     },
     {
       "cell_type": "code",
@@ -163,10 +163,10 @@
         "y_ <- my_model %>% predict(X)\n",
         "mean((y_ - y)^2)**0.5"
       ],
-      "id": "17afc599-4513-4bcc-807c-61acc941dcd3"
+      "id": "af21aa79-c7d6-4282-a7fc-5dbb3d3cd14c"
     },
     {
-      "id": "886681b0",
+      "id": "7a94c43a",
       "cell_type": "markdown",
       "source": "## 11.2 Keras\u306b\u3088\u308b\u5206\u985e",
       "metadata": {}
@@ -185,7 +185,7 @@
         "library(tidyverse)\n",
         "my_data <- iris[sample(nrow(iris)), ]"
       ],
-      "id": "07985f3e-616e-4382-b264-4f73c8cde2a1"
+      "id": "aedf4527-92fa-44a9-9589-86b1133d71ce"
     },
     {
       "cell_type": "code",
@@ -197,7 +197,7 @@
         "  select(-Species) %>% scale\n",
         "y <- as.integer(my_data$Species) - 1"
       ],
-      "id": "64e1632e-85d4-4671-a1a0-36927d79d1f4"
+      "id": "b64adc1c-edcc-4567-afb6-96758d1851a1"
     },
     {
       "cell_type": "code",
@@ -209,7 +209,7 @@
         "  layer_dense(units = 3, activation = \"relu\", input_shape = c(4)) %>%\n",
         "  layer_dense(units = 3, activation = \"softmax\")"
       ],
-      "id": "a3324ee0-4fce-4e5e-a5bb-c91c7c15d2bb"
+      "id": "a2d4e1a0-51b4-4d2e-a9f1-c86407c17b1c"
     },
     {
       "cell_type": "code",
@@ -221,7 +221,7 @@
         "                     optimizer = \"rmsprop\",\n",
         "                     metrics = c(\"accuracy\"))"
       ],
-      "id": "a8404c06-3e42-40c1-bce2-3076514e9550"
+      "id": "6d6fc0d5-85f9-424b-b477-a06f880d9f16"
     },
     {
       "cell_type": "code",
@@ -244,7 +244,7 @@
         "\n",
         "plot(my_history)"
       ],
-      "id": "430c8d28-3637-464d-aa89-cc6f7ce0e5c1"
+      "id": "2e1a2550-80d4-4d95-a3cb-e9608fe38b9b"
     },
     {
       "cell_type": "code",
@@ -254,7 +254,7 @@
       "source": [
         "my_history"
       ],
-      "id": "0dd861d5-b27b-4e51-b53f-cf91f7fb1585"
+      "id": "f9fc4bc2-07b4-4801-826e-289f023be586"
     },
     {
       "cell_type": "code",
@@ -266,7 +266,7 @@
         "y_ <- apply(tmp, 1, which.max) - 1\n",
         "mean(y_ == y)"
       ],
-      "id": "70489d5c-a524-40f5-b9d9-e8a835e325c9"
+      "id": "798d365c-a075-41c7-b7d5-f24fb289c913"
     },
     {
       "cell_type": "code",
@@ -278,7 +278,7 @@
         "\n",
         "-mean(log(c(0.7, 0.6, 0.2, 0.7)))"
       ],
-      "id": "55ac573f-71e9-4d54-9fce-21c3abe30ddf"
+      "id": "4093488d-46b2-41bf-aa49-c3e05ccc2bff"
     },
     {
       "cell_type": "code",
@@ -296,7 +296,7 @@
         "             c(0.2, 0.5, 0.3),\n",
         "             c(0.2, 0.7, 0.1))"
       ],
-      "id": "62139a11-dee4-4c1b-81ce-6da132762afa"
+      "id": "d6dbf669-ebe5-4133-9f9e-53146eda16fc"
     },
     {
       "cell_type": "code",
@@ -307,10 +307,10 @@
         "c(mean(as.array(loss_sparse_categorical_crossentropy(y_true = y, y_pred = y_1))),\n",
         "  mean(as.array(loss_sparse_categorical_crossentropy(y_true = y, y_pred = y_2))))"
       ],
-      "id": "d9cd1bc1-76ba-46c2-b9da-350e82aa08d8"
+      "id": "f102b13a-3155-4833-b262-4d07b3ab7e51"
     },
     {
-      "id": "20f23787",
+      "id": "92399a0b",
       "cell_type": "markdown",
       "source": "## 11.3 MNIST\uff1a\u624b\u66f8\u304d\u6570\u5b57\u306e\u5206\u985e",
       "metadata": {}
@@ -323,13 +323,15 @@
       "source": [
         "if (Sys.getenv(\"COLAB_JUPYTER_IP\") != \"\") {\n",
         "  library(keras3)\n",
+        "  keras3::`%<-%`(c(c(x_train, y_train), c(x_test, y_test)), dataset_mnist())\n",
         "} else {\n",
         "  library(keras)\n",
+        "  keras::`%<-%`(c(c(x_train, y_train), c(x_test, y_test)), dataset_mnist())\n",
         "}\n",
-        "library(tidyverse)\n",
-        "c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()"
+        "# c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()\n",
+        "library(tidyverse)"
       ],
-      "id": "85eee8e5-7efe-44ad-8ccd-bc6ad7940912"
+      "id": "bfe57e7b-b9dd-4ffd-8fa0-181a62142a4b"
     },
     {
       "cell_type": "code",
@@ -339,7 +341,7 @@
       "source": [
         "dim(x_train)"
       ],
-      "id": "4dc69a31-549c-4e09-b333-4123c5321d7a"
+      "id": "7ba59a49-fc6f-4c14-9745-a45f4f3b4ba3"
     },
     {
       "cell_type": "code",
@@ -349,7 +351,7 @@
       "source": [
         "x_train[5, , ]"
       ],
-      "id": "5cbd757b-56c9-48f1-a8f8-71af3f811f23"
+      "id": "9c9e9e7f-9dcf-4e82-8a85-50855ea3b438"
     },
     {
       "cell_type": "code",
@@ -360,7 +362,7 @@
         "plot(as.raster(x = x_train[5, , ],\n",
         "               max = max(x_train)))"
       ],
-      "id": "b37290d3-4113-46a4-a826-291a212cc6b7"
+      "id": "1724a54b-1c72-485c-a403-a514e80da847"
     },
     {
       "cell_type": "code",
@@ -370,7 +372,7 @@
       "source": [
         "head(y_train)"
       ],
-      "id": "f53d65d4-42f8-4205-8f6d-5f6e8f4a1eb5"
+      "id": "0f5e0b42-0c73-44e4-b699-c99224addbb1"
     },
     {
       "cell_type": "code",
@@ -380,7 +382,7 @@
       "source": [
         "c(min(x_train), max(x_train))"
       ],
-      "id": "daa88019-ec64-4945-b603-459f9b774244"
+      "id": "fbe3a2cf-7f3c-417f-b471-f14fa1f63c00"
     },
     {
       "cell_type": "code",
@@ -391,7 +393,7 @@
         "x_train <- x_train / 255\n",
         "x_test  <- x_test  / 255"
       ],
-      "id": "2839af0e-0a47-43a7-b7af-274896aed861"
+      "id": "5135d92f-1d69-4558-a915-a44cabfd6f1c"
     },
     {
       "cell_type": "code",
@@ -403,7 +405,7 @@
         "x_train <- x_train[my_index, , ]\n",
         "y_train <- y_train[my_index]"
       ],
-      "id": "7c50048a-70eb-41df-9c3c-57c3dfd89299"
+      "id": "09844941-fe45-4a73-a2ba-135bf1ff3aef"
     },
     {
       "cell_type": "code",
@@ -425,7 +427,7 @@
         "my_cb <- callback_early_stopping(patience = 5,\n",
         "                                 restore_best_weights = TRUE)"
       ],
-      "id": "54e39270-3904-4079-b49f-5f610098d95d"
+      "id": "f85f6e95-132e-47ae-acd6-dff99fbe0909"
     },
     {
       "cell_type": "code",
@@ -444,7 +446,7 @@
         "\n",
         "plot(my_history)"
       ],
-      "id": "9647f981-e48a-4ce8-a8ce-95363e032f05"
+      "id": "6856f4f1-b345-442f-8b8e-7e2891a9826e"
     },
     {
       "cell_type": "code",
@@ -456,7 +458,7 @@
         "y_ <- apply(tmp, 1, which.max) - 1\n",
         "table(y_, y_test)"
       ],
-      "id": "edc06331-6070-4882-b32b-3a5a4e855a38"
+      "id": "2aada84f-8652-411d-802b-f857e4269d2a"
     },
     {
       "cell_type": "code",
@@ -464,7 +466,7 @@
       "metadata": {},
       "outputs": [],
       "source": [],
-      "id": "adcf2909-72cc-4b18-accc-b39ca2ee7729"
+      "id": "a094050f-a6bf-4bc0-8f3e-1d57257bbbb3"
     },
     {
       "cell_type": "code",
@@ -474,7 +476,7 @@
       "source": [
         "mean(y_ == y_test)"
       ],
-      "id": "97c35f82-3020-4426-b0cc-72ee09f2064d"
+      "id": "b9d914c5-1b8c-4534-9cff-f4fca7e91abd"
     },
     {
       "cell_type": "code",
@@ -485,7 +487,7 @@
         "my_model %>%\n",
         "  evaluate(x = x_test, y = y_test)"
       ],
-      "id": "374d0327-ffd0-4f46-af59-7d79a80bc9a5"
+      "id": "2c0814b5-41a6-4cab-b7c5-9b8b753b59c0"
     },
     {
       "cell_type": "code",
@@ -496,7 +498,7 @@
         "x_train2d <- x_train %>% array_reshape(c(-1, 28, 28, 1))\n",
         "x_test2d  <- x_test  %>% array_reshape(c(-1, 28, 28, 1))"
       ],
-      "id": "deb6b5c6-19f5-42c1-9d6e-21a2efa42fdb"
+      "id": "2c97547b-aa25-4321-9f4f-2aa8295ae72a"
     },
     {
       "cell_type": "code",
@@ -523,7 +525,7 @@
         "my_cb <- callback_early_stopping(patience = 5,\n",
         "                                 restore_best_weights = TRUE)"
       ],
-      "id": "52f303c5-ab07-46a5-95d2-487a26038537"
+      "id": "efeee514-4085-4be9-81db-f78c292226c8"
     },
     {
       "cell_type": "code",
@@ -542,7 +544,7 @@
         "\n",
         "plot(my_history)"
       ],
-      "id": "84accc2b-6f1d-4999-b873-843e07c4325e"
+      "id": "255b1c9f-3a38-4e51-8d08-40d181f14f6d"
     },
     {
       "cell_type": "code",
@@ -553,7 +555,7 @@
         "my_model %>%\n",
         "  evaluate(x = x_test2d, y = y_test)"
       ],
-      "id": "43580803-e0e6-4afc-93a7-5cfdabd14816"
+      "id": "101392e8-1246-4575-99d1-56c17691f602"
     },
     {
       "cell_type": "code",
@@ -581,7 +583,7 @@
         "my_cb <- callback_early_stopping(patience = 5,\n",
         "                                 restore_best_weights = TRUE)"
       ],
-      "id": "2df945a4-ec03-4f92-9999-0a27c5f46a46"
+      "id": "93f2537c-30a0-4ada-b594-0606b22fcb7e"
     },
     {
       "cell_type": "code",
@@ -600,7 +602,7 @@
         "\n",
         "plot(my_history)"
       ],
-      "id": "72a1eb89-9635-45d2-a82e-8395e904c205"
+      "id": "b621fff7-99a6-44cb-8050-ba01f798931c"
     },
     {
       "cell_type": "code",
@@ -611,7 +613,7 @@
         "my_model %>%\n",
         "  evaluate(x = x_test2d, y = y_test)"
       ],
-      "id": "c35fe39a-e301-4afd-9b9c-4e2709ecf73a"
+      "id": "7f9cb3dc-7e62-4157-b2e0-2b727c32974d"
     },
     {
       "cell_type": "code",
@@ -629,7 +631,7 @@
         "  filter(y_ != y) %>%                       # \u4e88\u6e2c\u304c\u306f\u305a\u308c\u305f\u3082\u306e\u3092\u6b8b\u3059\n",
         "  arrange(desc(y_prob))                     # \u78ba\u7387\u306e\u5927\u304d\u3044\u9806\u306b\u4e26\u3073\u66ff\u3048\u308b"
       ],
-      "id": "5f6a14cc-eee6-42ba-86fe-cbcbdd4b5462"
+      "id": "ad905bd6-1e65-41dd-b7f5-741615927c75"
     },
     {
       "cell_type": "code",
@@ -639,7 +641,7 @@
       "source": [
         "head(my_result)"
       ],
-      "id": "e9097ab2-8435-49fa-a03a-f0ea9ab96c70"
+      "id": "58100447-9e8c-4948-9301-a1d7089917c0"
     },
     {
       "cell_type": "code",
@@ -665,10 +667,10 @@
         "  theme(legend.position = \"none\") +\n",
         "  facet_grid(. ~ label)"
       ],
-      "id": "5db1810e-ffb6-4b46-90dc-152a68d65db4"
+      "id": "3c633b72-1ab2-4006-b089-487116aad473"
     },
     {
-      "id": "f8ae4f91",
+      "id": "db5ee03e",
       "cell_type": "markdown",
       "source": "## 11.4 AutoML",
       "metadata": {}
@@ -691,7 +693,7 @@
         "h2o.no_progress()\n",
         "# h2o.shutdown(prompt = FALSE) # \u505c\u6b62"
       ],
-      "id": "fce65b55-96f8-4796-9050-618889fbe0a0"
+      "id": "ece3b716-9bd1-434a-8736-75f3cfd8f67a"
     },
     {
       "cell_type": "code",
@@ -706,7 +708,7 @@
         "# \u3042\u308b\u3044\u306f\n",
         "my_frame <- h2o.importFile(my_url, header = TRUE) # \u30c7\u30fc\u30bf\u3092\u8aad\u307f\u8fbc\u3080\uff0e"
       ],
-      "id": "9fa46b0d-6b02-43b0-9c9f-37d004bf4ad3"
+      "id": "5e3271a4-3d23-4f1b-aee5-58fc88cb6fd8"
     },
     {
       "cell_type": "code",
@@ -720,7 +722,7 @@
         "my_frame %>% as.data.frame %>% head\n",
         "# \u7d50\u679c\u306f\u5272\u611b\uff08\u898b\u305f\u76ee\u306f\u540c\u3058\uff09"
       ],
-      "id": "8d0aec98-70b0-48b9-b7be-a1ed8bb0238b"
+      "id": "69690590-4a97-4800-b86a-a00c41d4e449"
     },
     {
       "cell_type": "code",
@@ -733,7 +735,7 @@
         "    training_frame = my_frame,\n",
         "    max_runtime_secs = 60)"
       ],
-      "id": "3a76a85d-2264-4d3d-9220-6318afd723d8"
+      "id": "2d7962e7-007a-4c06-bc42-55c0db7caeb4"
     },
     {
       "cell_type": "code",
@@ -743,7 +745,7 @@
       "source": [
         "min(my_model@leaderboard$rmse)"
       ],
-      "id": "2d72d26b-c036-4503-aa77-087a4d359a5b"
+      "id": "eb4a2367-9eee-40b0-8e6f-4a184038c04d"
     },
     {
       "cell_type": "code",
@@ -759,7 +761,7 @@
         "\n",
         "plot(y, y_)"
       ],
-      "id": "88f6a1f1-a19d-4de6-847b-a69835395b08"
+      "id": "b276406d-95b0-4c02-ad11-513e1b035570"
     },
     {
       "cell_type": "code",
@@ -767,12 +769,17 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()\n",
+        "if (Sys.getenv(\"COLAB_JUPYTER_IP\") != \"\") {\n",
+        "  keras3::`%<-%`(c(c(x_train, y_train), c(x_test, y_test)), dataset_mnist())\n",
+        "} else {\n",
+        "  keras::`%<-%`(c(c(x_train, y_train), c(x_test, y_test)), dataset_mnist())\n",
+        "}\n",
+        "# c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()\n",
         "my_index <- sample(1:60000, 6000)\n",
         "x_train <- x_train[my_index, , ]\n",
         "y_train <- y_train[my_index]"
       ],
-      "id": "731319d1-569d-4824-b3fe-8237025e619d"
+      "id": "5bd47177-28c6-47f3-a761-f078cec30371"
     },
     {
       "cell_type": "code",
@@ -791,7 +798,7 @@
         "  as.data.frame\n",
         "my_test <- as.h2o(tmp)"
       ],
-      "id": "f409288e-68fb-43df-9f1b-92430ccb1c3f"
+      "id": "ef71eaa6-3140-4810-aed1-0faa925dcb93"
     },
     {
       "cell_type": "code",
@@ -804,7 +811,7 @@
         "    training_frame = my_train,\n",
         "    max_runtime_secs = 120)"
       ],
-      "id": "d54746bb-1f99-49aa-9f36-202c8e2cd9b9"
+      "id": "4416da6f-4a9c-4a7e-8fac-49bb4a9c3b22"
     },
     {
       "cell_type": "code",
@@ -815,7 +822,7 @@
         "min(my_model@leaderboard$\n",
         "    mean_per_class_error)"
       ],
-      "id": "d2fae722-1283-4339-8c0d-5d328ef189da"
+      "id": "9e07ba1d-7dcc-4e95-a139-92aaf24129a8"
     },
     {
       "cell_type": "code",
@@ -829,7 +836,7 @@
         "\n",
         "mean(y_ == y_test)"
       ],
-      "id": "a8f2e855-8f3b-4478-b777-d699d00e783a"
+      "id": "863d14d1-70b5-4c70-a238-21d2638b4db7"
     }
   ],
   "nbformat": 4,
