--- a/code/r.Rmd
+++ b/code/r.Rmd
@@ -2767,11 +2767,13 @@ c(mean(as.array(loss_sparse_categorical_crossentropy(y_true = y, y_pred = y_1)))
 ```{r}
 if (Sys.getenv("COLAB_JUPYTER_IP") != "") {
   library(keras3)
+  keras3::`%<-%`(c(c(x_train, y_train), c(x_test, y_test)), dataset_mnist())
 } else {
   library(keras)
+  keras::`%<-%`(c(c(x_train, y_train), c(x_test, y_test)), dataset_mnist())
 }
+# c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()
 library(tidyverse)
-c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()
 ```
 
 ```{r}
@@ -3028,7 +3030,12 @@ plot(y, y_)
 ```
 
 ```{r}
-c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()
+if (Sys.getenv("COLAB_JUPYTER_IP") != "") {
+  keras3::`%<-%`(c(c(x_train, y_train), c(x_test, y_test)), dataset_mnist())
+} else {
+  keras::`%<-%`(c(c(x_train, y_train), c(x_test, y_test)), dataset_mnist())
+}
+# c(c(x_train, y_train), c(x_test, y_test)) %<-% dataset_mnist()
 my_index <- sample(1:60000, 6000)
 x_train <- x_train[my_index, , ]
 y_train <- y_train[my_index]
